// Vitest Snapshot v1

exports[`basic > hi @:name ! 1`] = `
{
  "body": {
    "end": 11,
    "items": [
      {
        "end": 3,
        "loc": {
          "end": {
            "column": 4,
            "line": 1,
            "offset": 3,
          },
          "start": {
            "column": 1,
            "line": 1,
            "offset": 0,
          },
        },
        "start": 0,
        "type": 3,
        "value": "hi ",
      },
      {
        "end": 9,
        "key": {
          "end": 9,
          "loc": {
            "end": {
              "column": 10,
              "line": 1,
              "offset": 9,
            },
            "start": {
              "column": 6,
              "line": 1,
              "offset": 5,
            },
          },
          "start": 5,
          "type": 7,
          "value": "name",
        },
        "loc": {
          "end": {
            "column": 10,
            "line": 1,
            "offset": 9,
          },
          "start": {
            "column": 4,
            "line": 1,
            "offset": 3,
          },
        },
        "start": 3,
        "type": 6,
      },
      {
        "end": 11,
        "loc": {
          "end": {
            "column": 12,
            "line": 1,
            "offset": 11,
          },
          "start": {
            "column": 10,
            "line": 1,
            "offset": 9,
          },
        },
        "start": 9,
        "type": 3,
        "value": " !",
      },
    ],
    "loc": {
      "end": {
        "column": 12,
        "line": 1,
        "offset": 11,
      },
      "start": {
        "column": 1,
        "line": 1,
        "offset": 0,
      },
    },
    "start": 0,
    "type": 2,
  },
  "end": 11,
  "loc": {
    "end": {
      "column": 12,
      "line": 1,
      "offset": 11,
    },
    "source": "hi @:name !",
    "start": {
      "column": 1,
      "line": 1,
      "offset": 0,
    },
  },
  "start": 0,
  "type": 0,
}
`;

exports[`literal key > hi @:{'hello world'} ! 1`] = `
{
  "body": {
    "end": 22,
    "items": [
      {
        "end": 3,
        "loc": {
          "end": {
            "column": 4,
            "line": 1,
            "offset": 3,
          },
          "start": {
            "column": 1,
            "line": 1,
            "offset": 0,
          },
        },
        "start": 0,
        "type": 3,
        "value": "hi ",
      },
      {
        "end": 20,
        "key": {
          "end": 20,
          "loc": {
            "end": {
              "column": 21,
              "line": 1,
              "offset": 20,
            },
            "start": {
              "column": 6,
              "line": 1,
              "offset": 5,
            },
          },
          "start": 5,
          "type": 9,
          "value": "hello world",
        },
        "loc": {
          "end": {
            "column": 21,
            "line": 1,
            "offset": 20,
          },
          "start": {
            "column": 4,
            "line": 1,
            "offset": 3,
          },
        },
        "start": 3,
        "type": 6,
      },
      {
        "end": 22,
        "loc": {
          "end": {
            "column": 23,
            "line": 1,
            "offset": 22,
          },
          "start": {
            "column": 21,
            "line": 1,
            "offset": 20,
          },
        },
        "start": 20,
        "type": 3,
        "value": " !",
      },
    ],
    "loc": {
      "end": {
        "column": 23,
        "line": 1,
        "offset": 22,
      },
      "start": {
        "column": 1,
        "line": 1,
        "offset": 0,
      },
    },
    "start": 0,
    "type": 2,
  },
  "end": 22,
  "loc": {
    "end": {
      "column": 23,
      "line": 1,
      "offset": 22,
    },
    "source": "hi @:{'hello world'} !",
    "start": {
      "column": 1,
      "line": 1,
      "offset": 0,
    },
  },
  "start": 0,
  "type": 0,
}
`;

exports[`modifier > hi @.upper:name ! 1`] = `
{
  "body": {
    "end": 19,
    "items": [
      {
        "end": 3,
        "loc": {
          "end": {
            "column": 4,
            "line": 1,
            "offset": 3,
          },
          "start": {
            "column": 1,
            "line": 1,
            "offset": 0,
          },
        },
        "start": 0,
        "type": 3,
        "value": "hi ",
      },
      {
        "end": 17,
        "key": {
          "end": 17,
          "key": "name",
          "loc": {
            "end": {
              "column": 18,
              "line": 1,
              "offset": 17,
            },
            "start": {
              "column": 12,
              "line": 1,
              "offset": 11,
            },
          },
          "start": 11,
          "type": 4,
        },
        "loc": {
          "end": {
            "column": 18,
            "line": 1,
            "offset": 17,
          },
          "start": {
            "column": 4,
            "line": 1,
            "offset": 3,
          },
        },
        "modifier": {
          "end": 10,
          "loc": {
            "end": {
              "column": 11,
              "line": 1,
              "offset": 10,
            },
            "start": {
              "column": 5,
              "line": 1,
              "offset": 4,
            },
          },
          "start": 4,
          "type": 8,
          "value": "upper",
        },
        "start": 3,
        "type": 6,
      },
      {
        "end": 19,
        "loc": {
          "end": {
            "column": 20,
            "line": 1,
            "offset": 19,
          },
          "start": {
            "column": 18,
            "line": 1,
            "offset": 17,
          },
        },
        "start": 17,
        "type": 3,
        "value": " !",
      },
    ],
    "loc": {
      "end": {
        "column": 20,
        "line": 1,
        "offset": 19,
      },
      "start": {
        "column": 1,
        "line": 1,
        "offset": 0,
      },
    },
    "start": 0,
    "type": 2,
  },
  "end": 19,
  "loc": {
    "end": {
      "column": 20,
      "line": 1,
      "offset": 19,
    },
    "source": "hi @.upper:{name} !",
    "start": {
      "column": 1,
      "line": 1,
      "offset": 0,
    },
  },
  "start": 0,
  "type": 0,
}
`;

exports[`multiple > hi @:{name} @:{0}! 1`] = `
{
  "body": {
    "end": 18,
    "items": [
      {
        "end": 3,
        "loc": {
          "end": {
            "column": 4,
            "line": 1,
            "offset": 3,
          },
          "start": {
            "column": 1,
            "line": 1,
            "offset": 0,
          },
        },
        "start": 0,
        "type": 3,
        "value": "hi ",
      },
      {
        "end": 11,
        "key": {
          "end": 11,
          "key": "name",
          "loc": {
            "end": {
              "column": 12,
              "line": 1,
              "offset": 11,
            },
            "start": {
              "column": 6,
              "line": 1,
              "offset": 5,
            },
          },
          "start": 5,
          "type": 4,
        },
        "loc": {
          "end": {
            "column": 12,
            "line": 1,
            "offset": 11,
          },
          "start": {
            "column": 4,
            "line": 1,
            "offset": 3,
          },
        },
        "start": 3,
        "type": 6,
      },
      {
        "end": 12,
        "loc": {
          "end": {
            "column": 13,
            "line": 1,
            "offset": 12,
          },
          "start": {
            "column": 12,
            "line": 1,
            "offset": 11,
          },
        },
        "start": 11,
        "type": 3,
        "value": " ",
      },
      {
        "end": 17,
        "key": {
          "end": 17,
          "index": 0,
          "loc": {
            "end": {
              "column": 18,
              "line": 1,
              "offset": 17,
            },
            "start": {
              "column": 15,
              "line": 1,
              "offset": 14,
            },
          },
          "start": 14,
          "type": 5,
        },
        "loc": {
          "end": {
            "column": 18,
            "line": 1,
            "offset": 17,
          },
          "start": {
            "column": 13,
            "line": 1,
            "offset": 12,
          },
        },
        "start": 12,
        "type": 6,
      },
      {
        "end": 18,
        "loc": {
          "end": {
            "column": 19,
            "line": 1,
            "offset": 18,
          },
          "start": {
            "column": 18,
            "line": 1,
            "offset": 17,
          },
        },
        "start": 17,
        "type": 3,
        "value": "!",
      },
    ],
    "loc": {
      "end": {
        "column": 19,
        "line": 1,
        "offset": 18,
      },
      "start": {
        "column": 1,
        "line": 1,
        "offset": 0,
      },
    },
    "start": 0,
    "type": 2,
  },
  "end": 18,
  "loc": {
    "end": {
      "column": 19,
      "line": 1,
      "offset": 18,
    },
    "source": "hi @:{name} @:{0}!",
    "start": {
      "column": 1,
      "line": 1,
      "offset": 0,
    },
  },
  "start": 0,
  "type": 0,
}
`;

exports[`terminated with new line > hi @:{name}
 ! 1`] = `
{
  "body": {
    "end": 14,
    "items": [
      {
        "end": 3,
        "loc": {
          "end": {
            "column": 4,
            "line": 1,
            "offset": 3,
          },
          "start": {
            "column": 1,
            "line": 1,
            "offset": 0,
          },
        },
        "start": 0,
        "type": 3,
        "value": "hi ",
      },
      {
        "end": 11,
        "key": {
          "end": 11,
          "key": "name",
          "loc": {
            "end": {
              "column": 12,
              "line": 1,
              "offset": 11,
            },
            "start": {
              "column": 6,
              "line": 1,
              "offset": 5,
            },
          },
          "start": 5,
          "type": 4,
        },
        "loc": {
          "end": {
            "column": 12,
            "line": 1,
            "offset": 11,
          },
          "start": {
            "column": 4,
            "line": 1,
            "offset": 3,
          },
        },
        "start": 3,
        "type": 6,
      },
      {
        "end": 14,
        "loc": {
          "end": {
            "column": 3,
            "line": 2,
            "offset": 14,
          },
          "start": {
            "column": 12,
            "line": 1,
            "offset": 11,
          },
        },
        "start": 11,
        "type": 3,
        "value": "
 !",
      },
    ],
    "loc": {
      "end": {
        "column": 3,
        "line": 2,
        "offset": 14,
      },
      "start": {
        "column": 1,
        "line": 1,
        "offset": 0,
      },
    },
    "start": 0,
    "type": 2,
  },
  "end": 14,
  "loc": {
    "end": {
      "column": 3,
      "line": 2,
      "offset": 14,
    },
    "source": "hi @:{name}
 !",
    "start": {
      "column": 1,
      "line": 1,
      "offset": 0,
    },
  },
  "start": 0,
  "type": 0,
}
`;
